# Face-recognition-and-emotion-detection-based-on-Raspberry-Pi

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  SECURITY.md  debug.md  esp32.md  landmark_model_requirements.md  network.md  performance.md  rebuild_plan.md  task.md  test1.md  try.md  up.md  use.md
.claude/: settings.local.json
.codex_cmake_check/: CMakeCache.txt
cloud_server/: README.md  __init__.py  app.py  config.example.yaml  config.yaml  environment.yml  requirements-cpu.txt  requirements-gpu.txt  requirements.txt
cloud_server/services/: __init__.py  config.py  emotion_service.py  fake_analyzer.py  gallery_store.py  identity_service.py  ort_providers.py  platform_reporter.py  runtime.py
cloud_server/tools/: enroll_gallery.py
config/: app.example.yaml  app.yaml
data/: cloud_gallery.npz  cloud_gallery_insightface.npz
examples/esp32_platform_client/: esp32_platform_client.ino
include/camera/: CameraManager.hpp
include/cloud/: CloudClient.hpp  CloudTypes.hpp
include/core/: App.hpp  StateMachine.hpp  ThreadSafeQueue.hpp  Types.hpp
include/engine/: ConfidenceMapper.hpp  EmotionRecognizer.hpp  FaceAligner.hpp  FaceDetector.hpp  FaceLandmarkEstimator.hpp  FaceRecognizer.hpp  InferencePipeline.hpp
include/platform/: PlatformClient.hpp
include/quality/: FaceQualityGate.hpp
include/storage/: Database.hpp  EmbeddingStore.hpp  FileStore.hpp
include/tracking/: Track.hpp  TrackManager.hpp
include/ui/: Renderer.hpp
models/: README.md
models/onnx_to_ncnn/: emotion.param  face_detector.param  face_recognizer.param  scrfd_500m_bnkps_shape640x640.param
platform_server/: README.md  __init__.py  app.py
platform_server/services/: __init__.py  prober.py  store.py
platform_server/static/: index.html
scripts/: check_camera_fps.sh  check_camera_modes.sh  check_pi_cloud_link.ps1  convert_models.sh  install_ncnn_rpi.sh  post_platform_command.ps1  post_platform_status.ps1  rpi_performance_mode.sh  run_cloud_server.ps1  run_platform_server.ps1  run_rpi_turbo.sh  setup_pnnx_venv.sh  sync_to_pi.ps1
src/: main.cpp
src/camera/: CameraManager.cpp
src/cloud/: CloudClient.cpp
src/core/: App.cpp  StateMachine.cpp
src/engine/: ConfidenceMapper.cpp  EmotionRecognizer.cpp  FaceAligner.cpp  FaceDetector.cpp  FaceLandmarkEstimator.cpp  FaceRecognizer.cpp  InferencePipeline.cpp
src/platform/: PlatformClient.cpp
src/quality/: FaceQualityGate.cpp
src/storage/: Database.cpp  EmbeddingStore.cpp  FileStore.cpp
src/tracking/: TrackManager.cpp
src/ui/: Renderer.cpp
